; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_foreach_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_git_reference_foreach_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ITEROVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_reference_foreach_name(i32* %0, i32 (i8*, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32 (i8*, i8*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 (i8*, i8*)* %1, i32 (i8*, i8*)** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @git_reference_iterator_new(i32** %8, i32* %11)
  store i32 %12, i32* %10, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* %10, align 4
  store i32 %15, i32* %4, align 4
  br label %41

16:                                               ; preds = %3
  br label %17

17:                                               ; preds = %31, %16
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @git_reference_next_name(i8** %9, i32* %18)
  store i32 %19, i32* %10, align 4
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  br i1 %21, label %22, label %32

22:                                               ; preds = %17
  %23 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %6, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 %23(i8* %24, i8* %25)
  store i32 %26, i32* %10, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %22
  %29 = load i32, i32* %10, align 4
  %30 = call i32 @git_error_set_after_callback(i32 %29)
  br label %32

31:                                               ; preds = %22
  br label %17

32:                                               ; preds = %28, %17
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* @GIT_ITEROVER, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32
  store i32 0, i32* %10, align 4
  br label %37

37:                                               ; preds = %36, %32
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @git_reference_iterator_free(i32* %38)
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %37, %14
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @git_reference_iterator_new(i32**, i32*) #1

declare dso_local i32 @git_reference_next_name(i8**, i32*) #1

declare dso_local i32 @git_error_set_after_callback(i32) #1

declare dso_local i32 @git_reference_iterator_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
